main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}
provider "aws" {
  region                   = "il-central-1"
  shared_config_files      = ["~/.aws/config"]
  shared_credentials_files = ["~/.aws/credentials"]
  profile                  = "default"
}
resource "aws_ebs_volume" "jenkins_volume" {
  availability_zone = "il-central-1c"
  size              = 8
}
data "aws_vpc" "default" {
  default = true
}


data "aws_subnets" "default" {
  filter {
    name   = "vpc-id"
    values = [data.aws_vpc.default.id]
  }
}

resource "aws_security_group" "jenkins_master_sg" {
  name_prefix = "jenkins-master-sg-"
  description = "Security group for Jenkins Master"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # Allow SSH from anywhere
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # Allow Jenkins UI from anywhere
  }

  # Allow all outbound traffic
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "jenkins_master_sg"
  }
}

resource "aws_security_group" "jenkins_slave_sg" {
  name_prefix = "jenkins-slave-sg-"
  description = "Security group for Jenkins Slave"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.jenkins_master_sg.id] # Allow SSH from Jenkins Master
  }
  
  # Allow all outbound traffic
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "jenkins_slave_sg"
  }
}



resource "aws_instance" "jenkins" {
  ami             = "ami-07c0a4909b86650c0"
  instance_type   = "t3.micro"
  subnet_id       = data.aws_subnets.default.ids[0]
  vpc_security_group_ids = [aws_security_group.jenkins_master_sg.id]
  availability_zone = "il-central-1c"
  key_name      = "aws_tf"

  root_block_device {
    volume_size           = 30
    delete_on_termination = true 
  }

  tags = {
    Name = "jenkins_master"
  }
 
  user_data = <<-EOF
    #!/bin/bash

    sudo apt update
    sudo apt install -y git fontconfig openjdk-17-jre docker.io python3.10-venv curl

    echo "Java, Git, Docker and Python installed"

    sudo wget -O /usr/share/keyrings/jenkins-keyring.asc \
      https://pkg.jenkins.io/debian/jenkins.io-2023.key
    echo "deb [signed-by=/usr/share/keyrings/jenkins-keyring.asc] https://pkg.jenkins.io/debian binary/" \
      | sudo tee /etc/apt/sources.list.d/jenkins.list > /dev/null

    sudo apt update
    sudo apt install -y jenkins
    sudo usermod -aG docker jenkins
    sudo service jenkins restart

    echo "Jenkins installed successfully..."

    # Generate SSH key for jenkins user
    sudo -u jenkins ssh-keygen -t rsa -N "" -f /var/lib/jenkins/.ssh/id_rsa
    sudo cat /var/lib/jenkins/.ssh/id_rsa.pub | sudo tee -a /var/lib/jenkins/.ssh/authorized_keys
    sudo chmod 600 /var/lib/jenkins/.ssh/authorized_keys
    sudo chown jenkins:jenkins /var/lib/jenkins/.ssh/id_rsa /var/lib/jenkins/.ssh/id_rsa.pub /var/lib/jenkins/.ssh/authorized_keys
    sudo service jenkins restart

    echo "SSH key generated for jenkins user."

    # Placeholder for Jenkins slave setup script
    # This part would typically involve using the Jenkins API or JNLP to register a slave.
    # For a fully automated "one go" setup, a more complex script or a Jenkins plugin
    # would be needed. This is left as a placeholder to indicate where such logic would go.

  EOF
}

resource "aws_volume_attachment" "jenkins_va" {
  device_name = "/dev/sdf"
  volume_id   = aws_ebs_volume.jenkins_volume.id
  instance_id = aws_instance.jenkins.id
}

resource "aws_instance" "ubuntu" {
  ami             = "ami-07c0a4909b86650c0"
  instance_type   = "t3.micro"
  subnet_id       = data.aws_subnets.default.ids[0]
  vpc_security_group_ids = [aws_security_group.jenkins_slave_sg.id]
  availability_zone = "il-central-1c"
  key_name      = "aws_tf"

  root_block_device {
    volume_size           = 8
    delete_on_termination = true 
  }

  tags = {
    Name = "my ubuntu"
  }
   user_data = <<-EOF
    #!/bin/bash

    sudo apt update
    sudo apt install -y fontconfig openjdk-17-jre docker.io python3.10-venv git

    echo "Java, Docker, Python and Git installed"

    # Create jenkins user if it doesn't exist
    sudo id -u jenkins &>/dev/null || sudo useradd -m -s /bin/bash jenkins

    # Allow jenkins user to run docker commands
    sudo usermod -aG docker jenkins

    # Create .ssh directory and authorized_keys file for jenkins user
    sudo -u jenkins mkdir -p /home/jenkins/.ssh
    sudo -u jenkins touch /home/jenkins/.ssh/authorized_keys
    sudo -u jenkins chmod 700 /home/jenkins/.ssh
    sudo -u jenkins chmod 600 /home/jenkins/.ssh/authorized_keys
    sudo chown -R jenkins:jenkins /home/jenkins/.ssh

    # Add master's public key to authorized_keys - this will be replaced with actual key
    # In a real scenario, you would fetch the public key from the master or a secure location
    # and add it here. For this "one go" setup, this is a placeholder.
    # *** IMPORTANT: After 'terraform apply', you must manually add the public key of the Jenkins master
    # (from /var/lib/jenkins/.ssh/id_rsa.pub on the master) to this file on the slave:
    # sudo -u jenkins echo "<JENKINS_MASTER_PUBLIC_KEY>" >> /home/jenkins/.ssh/authorized_keys
    # For example, after 'terraform apply', SSH into the master, run 'sudo cat /var/lib/jenkins/.ssh/id_rsa.pub'
    # Copy the output, then SSH into the slave and run the 'sudo -u jenkins echo...' command.

    echo "Jenkins slave setup complete. Waiting for Jenkins master to connect..."
  EOF
}
resource "aws_ebs_volume" "ubuntu_volume" {
  availability_zone = "il-central-1c"
  size              = 8
}
resource "aws_volume_attachment" "ubuntu_va" {
  device_name = "/dev/sdf"
  volume_id   = aws_ebs_volume.ubuntu_volume.id
  instance_id = aws_instance.ubuntu.id
}




output "jenkins_master_public_ip" {
  description = "The public IP address of the Jenkins master instance"
  value       = aws_instance.jenkins.public_ip
}

output "jenkins_slave_public_ip" {
  description = "The public IP address of the Jenkins slave instance"
  value       = aws_instance.ubuntu.public_ip
}
